<resources>
    <string name="app_name">SloVentureAndroid</string>
    <string name="btnTestCamera">Take picture</string>
    <string name="btnSwitchCamera">Switch camera</string>
    <string name="btnGetAttractions">Get attractions</string>
    <string name="sw_notifs">Enable notifications</string>
    <string name="enable_notifs">Enable notifications in settings</string>
    <string name="active_service">SloVenture active</string>
    <string name="location_tracking">Tracking location in background</string>
    <string name="nearby_attraction">Attraction nearby!</string>
    <string name="take_pic">Take picture: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="last_capture">Last capture: %1$s</string>
    <string name="last_sensor_update">Last sensor update: %1$s</string>
    <string name="temperature">Temperature: %1$s</string>
    <string name="weather">Weather: %1$s</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="camera">Camera</string>
    <string name="weather_n_a">Weather: N/A</string>
    <string name="temperature_n_a">Temperature: N/A</string>
    <string name="longitude_n_a">Longitude: N/A</string>
    <string name="latitude_n_a">Latitude: N/A</string>
    <string name="live_sensor_data">Live Sensor Data:</string>
    <string name="last_capture_n_a">Last capture: N/A</string>
    <string name="stop_auto_capture">Stop Auto Capture</string>
    <string name="start_auto_capture">Start Auto Capture</string>
    <string name="_60">60</string>
    <string name="capture_interval_seconds">Capture interval (seconds):</string>
    <string name="sensor_capture">Sensor Capture</string>
    <string name="attractions_loaded">Attractions loaded: %1$d</string>
    <string name="capture_crowd_photo">Capture Crowd Photo</string>
    <string name="attraction_name">Attraction name</string>
    <string name="crowd_photo">Crowd photo</string>
    <string name="event_successfully_reported">Event successfully reported!</string>
    <string name="sensor_auto_capture">Sensor Auto Capture</string>
    <string name="sensor_simulation">Sensor Simulation</string>
    <string name="last_sent">Last sent: %1$s</string>
    <string name="post_message">Post Message</string>
    <string name="simulation">Simulation</string>
    <string name="min_temp_c">Min temp (°C)</string>
    <string name="max_temp_c">Max temp (°C)</string>
    <string name="interval_seconds">Interval (seconds)</string>
    <string name="latitude_optional">Latitude (optional)</string>
    <string name="longitude_optional">Longitude (optional)</string>
    <string name="start_simulation">Start simulation</string>
    <string name="stop_simulation">Stop simulation</string>
    <string name="last_sent_n_a">Last sent: N/A</string>
    <string name="report_an_event">Report an Event</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit_event">Submit event</string>
    <string name="no_photo_taken">No photo taken</string>
    <string name="event_sent_successfully">Event sent successfully!</string>
    <string name="sloventure_sensor_app">SloVenture</string>
    <string name="crowd_simulation">Crowd Simulation</string>
</resources>