<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sensorSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvSensorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_font"
        android:gravity="center"
        android:text="@string/sensor_capture"
        android:textColor="@color/md_theme_secondary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <TextView
        android:id="@+id/tvIntervalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_interval_seconds"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/btnStartAutoCapture"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <EditText
        android:id="@+id/etInterval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/_60"
        android:inputType="number"
        android:text="@string/_60"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvIntervalLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toEndOf="@+id/tvIntervalLabel" />

    <Button
        android:id="@+id/btnStartAutoCapture"
        style="@style/SVButtonSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_auto_capture"
        app:layout_constraintBottom_toTopOf="@+id/btnStopAutoCapture"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tvIntervalLabel" />

    <Button
        android:id="@+id/btnStopAutoCapture"
        style="@style/SVButtonSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_auto_capture"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/btnStartAutoCapture" />

    <TextView
        android:id="@+id/tvLastCapture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/last_capture_n_a"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/tvSensorPreviewTitle"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvSensorPreviewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/live_sensor_data"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvLatitude"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tvLastCapture" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/latitude_n_a"
        app:layout_constraintBottom_toTopOf="@+id/tvLongitude"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tvSensorPreviewTitle" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/longitude_n_a"
        app:layout_constraintBottom_toTopOf="@+id/tvTemperature"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitude" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/temperature_n_a"
        app:layout_constraintBottom_toTopOf="@+id/tvWeatherDescription"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitude" />

    <TextView
        android:id="@+id/tvWeatherDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weather_n_a"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperature" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>
