<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_font"
        android:gravity="center"
        android:text="@string/sloventure_sensor_app"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="@color/md_theme_primary"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sv_icon"
        app:layout_constraintBottom_toTopOf="@+id/tvDashboardTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvDashboardTitle"
        app:layout_constraintStart_toStartOf="@+id/tvDashboardTitle" />

    <Button
        android:id="@+id/btnGoToSensorSettings"
        style="@style/SVButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sensor_auto_capture"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToEvents"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/btnGoToEvents"
        style="@style/SVButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_message"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToSimulation"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToSensorSettings" />

    <Button
        android:id="@+id/btnGoToSimulation"
        style="@style/SVButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sensor_simulation"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToCrowdSimulation"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToEvents" />

    <Button
        android:id="@+id/btnGoToCrowdSimulation"
        style="@style/SVButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crowd_simulation"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToSimulation" />

    <Button
        android:id="@+id/btnUpdateAttractionCount"
        style="@style/SVButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fetch Attractions"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>
